crates/bitnet-inference/tests/snapshots/snapshot_wave25__w25_warmup_config_custom.snap
---
source: crates/bitnet-inference/tests/snapshot_wave25.rs
expression: cfg
---
WarmupConfig {
    iterations: 10,
    seq_len: 256,
    warmup_kv_cache: true,
    warmup_kernels: true,
    timeout: 120s,
}
