crates/bitnet-inference/tests/snapshots/snapshot_wave25__w25_warmup_config_default_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave25.rs
expression: cfg
---
WarmupConfig {
    iterations: 3,
    seq_len: 32,
    warmup_kv_cache: true,
    warmup_kernels: true,
    timeout: 30s,
}
