crates/bitnet-inference/tests/snapshots/snapshot_wave25__w25_warmup_config_fast_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave25.rs
expression: cfg
---
WarmupConfig {
    iterations: 1,
    seq_len: 8,
    warmup_kv_cache: false,
    warmup_kernels: true,
    timeout: 5s,
}
