crates/bitnet-inference/tests/snapshots/snapshot_wave25__w25_warmup_config_thorough_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave25.rs
expression: cfg
---
WarmupConfig {
    iterations: 5,
    seq_len: 128,
    warmup_kv_cache: true,
    warmup_kernels: true,
    timeout: 60s,
}
