crates/bitnet-inference/tests/snapshots/snapshot_wave25__w25_warmup_result_success.snap
---
source: crates/bitnet-inference/tests/snapshot_wave25.rs
expression: "format!(\"completed={} avg={:?} success={}\", result.iterations_completed,\nresult.avg_iteration_time(), result.is_success())"
---
completed=3 avg=150ms success=true
