crates/bitnet-inference/tests/snapshots/snapshot_wave25__w25_warmup_result_timed_out.snap
---
source: crates/bitnet-inference/tests/snapshot_wave25.rs
expression: result
---
WarmupResult {
    iterations_completed: 1,
    total_time: 30s,
    iteration_times: [
        30s,
    ],
    timed_out: true,
    status: TimedOut,
}
