crates/bitnet-inference/tests/snapshots/snapshot_wave25__w25_warmup_status_all_variants.snap
---
source: crates/bitnet-inference/tests/snapshot_wave25.rs
expression: variants
---
[
    Complete,
    TimedOut,
    Skipped,
]
